Fixed landing page on tablets

--- a/css/landing.css
+++ b/css/landing.css
@@ -8,7 +8,7 @@
     overflow:hidden;    
 
     /* This is pretty sweet -> https://codepen.io/dev_loop/pen/jOborLv */
-    cursor: url('../img/icons/compass.svg') 25 15, pointer;     
+    cursor: url('../img/icons/compass.svg') 12 12, pointer;     
   }
 
   
