--- a/css/nav-modal.css
+++ b/css/nav-modal.css
@@ -30,7 +30,7 @@
         width: 100%;
         height: 100vh;
           
-        background-color: rgba(0,0,0,0.9);
+        background-color: rgba(0,0,0,0.6);
       }
   
       section.menu .title {
